--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-nav{
-    boreder:
+
+.carousel-inner img{
+height: 500px;
+width: 1700px;
+
 }
+h1{
+text-align: center;
+color: rgb(4, 202, 209)
+}
+
+
