--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 
-.carousel-inner img{
-height: 500px;
-width: 1700px;
 
-}
+
 h1{
 text-align: center;
 color: rgb(4, 202, 209)
 }
 
+
+.carousel-inner{
+    height: 600px;
+    width: 100%
+}
 
