brandens not here

--- a/style.css
+++ b/style.css
@@ -40,3 +40,13 @@ svg{
     text-align: center;
     font-size: 1cm;
 }
+
+.rara{
+    padding-top: 60px;
+    font-size: x-large;
+}
+
+/* .card{
+    height: 700px;
+    margin: 30px;
+} */
