--- a/style.css
+++ b/style.css
@@ -86,3 +86,15 @@ width:100%;
 .lunch{
     color: black;
 }
+
+.yes{
+    padding-top: 20px;
+}
+
+h5{
+    color: gray;
+}
+
+.ok{
+    padding-top: 60px;
+}
