--- a/style.css
+++ b/style.css
@@ -98,3 +98,17 @@ h5{
 .ok{
     padding-top: 60px;
 }
+
+@media screen and (max-width: 770px) {
+     .carousel-inner{
+         height: 350px;
+     }
+  }
+
+  @media screen and (max-width: 420px) {
+    body {
+      background-color:red;
+    }
+  }
+  
+  
